; ModuleID = '/home/carl/AnghaBench/linux/fs/nfs/extr_nfs4proc.c_nfs4_sequence_free_slot.c'
source_filename = "/home/carl/AnghaBench/linux/fs/nfs/extr_nfs4proc.c_nfs4_sequence_free_slot.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nfs4_sequence_res = type { i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.nfs4_sequence_res*)* @nfs4_sequence_free_slot to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @nfs4_sequence_free_slot(%struct.nfs4_sequence_res* %0) #0 {
  %2 = alloca %struct.nfs4_sequence_res*, align 8
  store %struct.nfs4_sequence_res* %0, %struct.nfs4_sequence_res** %2, align 8
  %3 = load %struct.nfs4_sequence_res*, %struct.nfs4_sequence_res** %2, align 8
  %4 = getelementptr inbounds %struct.nfs4_sequence_res, %struct.nfs4_sequence_res* %3, i32 0, i32 0
  %5 = load i32*, i32** %4, align 8
  %6 = icmp ne i32* %5, null
  br i1 %6, label %7, label %10

7:                                                ; preds = %1
  %8 = load %struct.nfs4_sequence_res*, %struct.nfs4_sequence_res** %2, align 8
  %9 = call i32 @nfs40_sequence_free_slot(%struct.nfs4_sequence_res* %8)
  br label %10

10:                                               ; preds = %7, %1
  ret void
}

declare dso_local i32 @nfs40_sequence_free_slot(%struct.nfs4_sequence_res*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
